--- a/app/src/main/res/layout/faq_layout_fragment.xml
+++ b/app/src/main/res/layout/faq_layout_fragment.xml
@@ -24,7 +24,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view">
+            app:layout_constraintTop_toBottomOf="@+id/view"
+            app:run="@{!model.loading}"
+            app:script="@{model.javascript}"
+            >
 
         </WebView>
 
