--- a/app/src/main/res/layout/migrate_wallet_fragment.xml
+++ b/app/src/main/res/layout/migrate_wallet_fragment.xml
@@ -24,7 +24,7 @@
         android:gravity="center"
         android:lineSpacingExtra="37sp"
         android:padding="15sp"
-        android:text="@string/creating_wallet"
+        android:text="@string/migrating_wallet"
         android:textColor="#7884a5"
         android:textSize="16sp"
         android:textStyle="normal"
