--- a/app/src/main/res/layout/answer_hints_fragment.xml
+++ b/app/src/main/res/layout/answer_hints_fragment.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="model"
-            type="org.kinecosystem.kinit.viewmodel.restore.RestoreWalletViewModel" />
+            type="org.kinecosystem.kinit.viewmodel.walletBoot.RestoreWalletViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
