--- a/app/src/main/res/layout/boot_wallet_fragment.xml
+++ b/app/src/main/res/layout/boot_wallet_fragment.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
+    <data xmlns:android="http://schemas.android.com/apk/res/android">
+        <variable
+            name="model"
+            type="org.kinecosystem.kinit.view.bootWallet.BootWalletActions"/>
+
+        <variable
+            name="bootAction"
+            type="org.kinecosystem.kinit.view.bootWallet.BootWalletActivity.BootAction" />
+    </data>
+    <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -24,7 +35,7 @@
         android:gravity="center"
         android:lineSpacingExtra="37sp"
         android:padding="15sp"
-        android:text="@string/creating_wallet"
+        android:text="@{ model.walletAction == bootAction.CREATE ? @string/creating_wallet : @string/migrating_wallet}"
         android:textColor="#7884a5"
         android:textSize="16sp"
         android:textStyle="normal"
@@ -50,3 +61,5 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
+
+</layout>
