--- a/app/src/main/res/layout/migrate_wallet_error_fragment.xml
+++ b/app/src/main/res/layout/migrate_wallet_error_fragment.xml
@@ -5,7 +5,7 @@
     <data xmlns:android="http://schemas.android.com/apk/res/android">
         <variable
             name="model"
-            type="org.kinecosystem.kinit.viewmodel.walletBoot.MigrateWalletViewModel"/>
+            type="org.kinecosystem.kinit.viewmodel.bootwallet.MigrateWalletViewModel"/>
     </data>
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
