--- a/app/src/main/res/layout/boot_wallet_fragment.xml
+++ b/app/src/main/res/layout/boot_wallet_fragment.xml
@@ -1,65 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout">
+
     <data xmlns:android="http://schemas.android.com/apk/res/android">
+
         <variable
             name="model"
-            type="org.kinecosystem.kinit.viewmodel.bootwallet.BootWalletViewModel"/>
+            type="org.kinecosystem.kinit.viewmodel.bootwallet.BootWalletViewModel" />
 
         <variable
             name="bootAction"
             type="org.kinecosystem.kinit.viewmodel.bootwallet.BootAction" />
     </data>
+
     <android.support.constraint.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/creating_wallet_lottie"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/creating_wallet_lottie" />
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/creating_wallet_lottie"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="238dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:pause="@{ model.isError }"
+            app:lottie_rawRes="@raw/creating_wallet_lottie" />
 
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:gravity="center"
-        android:lineSpacingExtra="37sp"
-        android:padding="15sp"
-        android:text="@{ model.walletAction == bootAction.CREATE ? @string/creating_wallet : @string/migrating_wallet}"
-        android:textColor="#7884a5"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <View
+            android:id="@+id/retry"
+            android:layout_width="33dp"
+            android:layout_height="44dp"
+            android:onClick="@{model::onRetryClicked}"
+            app:layout_constraintBottom_toBottomOf="@+id/bottom_text"
+            app:layout_constraintStart_toStartOf="@+id/bottom_text"
+            app:layout_constraintTop_toTopOf="@+id/bottom_text" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="35dp"
-        android:fontFamily="sans-serif"
-        android:gravity="center_horizontal"
-        android:lineSpacingExtra="6sp"
-        android:text="@string/wallet_creation_timeout_string"
-        android:textColor="#7884a5"
-        android:textSize="14sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <View
+            android:id="@+id/contact_support"
+            android:layout_width="102dp"
+            android:layout_height="44dp"
+            android:onClick="@{model::onContactSupportClicked}"
+            app:layout_constraintBottom_toBottomOf="@+id/bottom_text"
+            app:layout_constraintEnd_toEndOf="@+id/bottom_text"
+            app:layout_constraintTop_toTopOf="@+id/bottom_text"
+            app:layout_constraintVertical_bias="1.0" />
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:gravity="center"
+            android:lineSpacingExtra="37sp"
+            android:padding="15sp"
+            android:text="@{ model.walletAction == bootAction.CREATE ? @string/creating_wallet : @string/migrating_wallet}"
+            android:textColor="#7884a5"
+            android:textSize="16sp"
+            android:textStyle="normal"
+            tools:text="Updating your wallet"
+            app:layout_constraintEnd_toEndOf="@+id/creating_wallet_lottie"
+            app:layout_constraintStart_toStartOf="@+id/creating_wallet_lottie"
+            app:layout_constraintTop_toBottomOf="@+id/creating_wallet_lottie" />
+
+        <TextView
+            android:id="@+id/bottom_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="35dp"
+            android:fontFamily="sans-serif"
+            android:gravity="center_horizontal"
+            android:lineSpacingExtra="6sp"
+            android:text="@{model.isError ? @string/error_booting_wallet_text : @string/wallet_creation_timeout_string}"
+            android:textColor="#7884a5"
+            android:textSize="14sp"
+            android:typeface="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="@string/error_booting_wallet_text" />
+
+        <View
+            android:id="@+id/line1"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:visibility="@{model.isError}"
+            android:background="@color/gray"
+            app:layout_constraintEnd_toEndOf="@+id/retry"
+            app:layout_constraintStart_toStartOf="@+id/retry"
+            app:layout_constraintTop_toBottomOf="@+id/retry" />
+
+        <View
+            android:id="@+id/line"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@color/gray"
+            android:visibility="@{model.isError}"
+            app:layout_constraintEnd_toEndOf="@+id/contact_support"
+            app:layout_constraintStart_toStartOf="@+id/contact_support"
+            app:layout_constraintTop_toBottomOf="@+id/retry" />
+
+    </android.support.constraint.ConstraintLayout>
 
 </layout>
