--- a/app/src/main/res/layout/boot_wallet_fragment.xml
+++ b/app/src/main/res/layout/boot_wallet_fragment.xml
@@ -37,6 +37,7 @@
             android:id="@+id/retry"
             android:layout_width="0dp"
             android:layout_height="44dp"
+            android:layout_marginEnd="16dp"
             android:onClick="@{model::onRetryClicked}"
             app:layout_constraintBottom_toBottomOf="@+id/bottom_text"
             app:layout_constraintEnd_toStartOf="@+id/contact_support"
