--- a/app/src/main/res/layout/backup_welcome_layout.xml
+++ b/app/src/main/res/layout/backup_welcome_layout.xml
@@ -72,4 +72,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/backup_illustration" />
 
+    <org.kinecosystem.appsdiscovery.sender.discovery.view.customView.AppsDiscoveryButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
